# kec-biomaterials-scaffolds

./: .deptry.toml  .gcloudignore  .gitignore  .gitmodules  CHANGELOG.md  CHATGPT_INTEGRATION_GUIDE.md  CITATION.cff  DARWIN_RELEASE_CHECKLIST.md  Dockerfile  Dockerfile.darwin-complete  INSTRUCOES_EXECUCAO.md  Makefile  README.md  README_ACTIONS.md  README_PRODUCTION.md  README_cloud.md  backup_darwin.sh  chatgpt_actions_darwin.json  cloudbuild-darwin-complete.yaml  cloudbuild.yaml  custom_domain_setup_summary.md  deploy-notes.md  docker-compose.local.yml  docker-compose.yml  domain_status.sh  environment.yml  ervices  gpt_actions_config_custom_domain.json  metadata.yml  middleware.ts  next.config.mjs  nginx.conf  openapi.yaml  package-lock.json  package.json  pyproject.toml  requirements-darwin.txt  requirements.txt  setup.sh  setup_chatgpt_integration.sh  (+4 more)
app/: layout.tsx  page.tsx
config/: cloud_config.yaml  environment.yml  policy.yaml  postman_collection.json
configs/: kec_config.yaml
darwin/: README.md  deploy.sh  docker-compose.local.yml  docker-compose.yml  setup.sh
darwin/frontend/ui/src-tauri/: Cargo.toml  tauri.conf.json
deploy/: deploy_modular_backend.sh  deploy_simple.sh
docs/: ADENDO_Metodologico_KEC2.0.md  BACKEND_MODULAR_ARCHITECTURE.md  DARWIN_PLATFORM_README.md  GPT_ACTIONS_SETUP.md  README_UI.md  VALIDATION.md  cost-notes.md  extensions.md
gpt_ingest/: KEC_BIOMAT_memory.md
kec_biomat_ingest/: Makefile  README.md  requirements.txt
public/: manifest.json
scripts/: smoke.sh  smoke_local.sh  smoke_public.sh  sync_chatgpt_to_darwin.py
(+682 files in other folders)
